# ddg_ex_2_1

./: CMakeLists.txt  README.md
InputFiles/: joint.ovm  sculpture.ovm  sphere.ovm
cmake/: FindOpenVolumeMesh.cmake
src/: main.cc
src/OpenVolumeMesh/Config/: Version.hh
